maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: not found: value x
        x=i
        ^JediEscaper:17: error: not found: value x
  return x;y
         ^JediEscaper:17: warning: enclosing method trouverbaggle has result type Unit: return value discarded
  return x;y
  ^