maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    // Your code here
}

def trouverbaggle {
  var a=0
  var y=0
  for (c <- 1 to getMondeHauteur()){
    for (i <- 1 to getMondeLargeur()){
      if (aBiscuit(i,c)){
        x=i
        y=c
      }
    }
  }
  return x;y
}